src/public/assets/css/dark.css
/* AIKO MAIL INC. ALL RIGHTS RESERVED. */

/* Color Declarations */
:root {
  --main-color: #486fff;
  /* Main Aiko accent */
  --main-color-hover: #4366e8;

  --main-bg-color: #312f2e !important;
  /* Sidebar and Header */
  --secondary-bg-color: #21201d !important;
  /* Control bar and picker and search, etc*/
  --secondary-bg-color-hover: #1d1c1a !important;
  /* Control bar and picker and search, etc*/

  --main-text-color: #a0a0a0;
  /* Sidebar, body preview, board title */
  --main-text-color-hover: #8c8c8c !important;

  --dark-text: #fff !important;
  /* Dropdown titles */

  --sidebar-item-bg-color: #21201d !important;
  /* Active and hover in sidebar */

  --email-bg-color: #21201d !important;
  --email-hover-bg-color: #1b1a17 !important;
  --sender-text-color: #a0a0a0 !important;
  --subject-text-color: #fff !important;

  --main-border: solid 1px #171615 !important;

  --placeholder-text-color: #5d5d5d !important;
  /* Global placeholder color */

  --modal-backdrop: #21201dd6 !important;
  /* Global modal backdrop */
}

/*  Custom styling */
.main-email {
  background: #312f2e !important;
  box-shadow: 4px 0 5px rgba(0, 0, 0, 0.08);
}

.main-email .action {
  background: #151515 !important;
}

.bg {
  background: var(--secondary-bg-color) !important;
}

body {
  background-color: var(--secondary-bg-color) !important;
}

.center-loader {
  background: var(--main-bg-color) !important;
}

.board .dropdown-menu.show {
  box-shadow: 0 1px 9px #0000006e !important;
}

.board {
  box-shadow: 0 0 15px #00000024 !important;
  background: var(--main-bg-color) !important;
}

.dropdown-menu,
.dropdown-menu a {
  background-color: var(--main-bg-color) !important;
  transition: .2s;
}

.add-board {
  box-shadow: none !important;
}

.add-board img {
  filter: none !important;
}

.archive {
  background: var(--secondary-bg-color) !important;
}

.dropdown-item:focus,
.dropdown-item:hover {
  background-color: var(--secondary-bg-color) !important;
  transition: .2s;
}

.sender {
  color: #c3c3c3 !important;
}

.dropdown-divider {
  border-top: 1px solid var(--secondary-bg-color) !important;
}

.search-drop a {
  color: #fff !important;
  transition: .2s;
}

.search-drop a:hover {
  color: var(--main-text-color) !important;
  transition: .2s;
}

.body {
  filter: brightness(0.8);
}

.unread .body {
  filter: brightness(1.2) !important;
}

.email {
  box-shadow: none !important;
  border: none;
}

.add-board {
  background: var(--main-bg-color) !important;
}

.secondary-count {
  background: var(--secondary-bg-color) !important;
}

.header {
  box-shadow: 8px 1px 10px #0000002e !important;
}

.amsify-suggestags-input-area {
  border-bottom: 1px solid var(--secondary-bg-color) !important;
}

.boards-container {
  box-shadow: none !important;
}

.sortable-drag {
  box-shadow: 0 6px 15px 1px #00000052 !important;
}

.email-footer {
  box-shadow: inset 5px 22px 40px -20px #00000073 !important;
}

.sidebar {
  box-shadow: 1px 1px 10px #00000040 !important;
}

.empty,
.empty2 {
  box-shadow: none !important;
}

.sidebar-collapse img {
  filter: invert(1);
}

.control-bar h1 {
  filter: invert(1);
}

.aiko-toast {
  box-shadow: -4px 3px 5px 3px #00000021 !important;
}

.aiko-toast p {
  color: #fff !important;
}

.aiko-toast a {
  color: #fff !important;
}

.aiko-toast a:hover {
  color: #fff !important;
}

.t-loader span {
  background: #fff !important;
}

